# herdays-website

./: .gitignore  AGENTS.md
.agent/rules/: browser-testing.md
.agent/skills/review-ui/: SKILL.md
.agent/workflows/: code-review.md  debug.md  new-api.md  new-component.md  onboard.md  pre-deploy.md  review-feature.md  scaffold-feature.md  smart-commit.md
.agents/skills/code-review/: SKILL.md
.agents/skills/connect-fe-be/: SKILL.md
ai-service/: .env.example  README.md  chat_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/app/: __init__.py  main.py
ai-service/app/api/: deps.py  router.py
ai-service/app/api/routes/: chat.py  health.py  knowledge.py
ai-service/app/core/: config.py  security.py
ai-service/app/schemas/: base.py  chat.py  knowledge.py
ai-service/app/services/: chat_service.py  intent.py  knowledge_service.py  openai_provider.py  prompt_builder.py  retrieval.py  safety.py  text_utils.py
ai-service/tests/: test_chat_contract.py  test_intent.py  test_safety.py
backend/: .eslintrc.cjs  BLOG_EXERCUTION_PLAN.md  README.md  jsconfig.json  package-lock.json  package.json
backend/src/: server.js
backend/src/config/: environment.js  mongodb.js
backend/src/controllers/: adminUserController.js  authController.js  blogController.js  boxController.js  cartController.js  chatController.js  contactController.js  orderController.js  productController.js  quizController.js  (+2 more)
dev/: rules.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.scss  index.css
(+163 files in other folders)
